# rust-htmx-dashboard

./: .dockerignore  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
assets/: tailwind.css
design/: dashboard.pen
migrations/: 20260313000000_create_tasks_table.sql  20260313000001_seed_tasks.sql
src/: db.rs  handlers.rs  main.rs  models.rs
templates/: base.html  dashboard.html  tasks.html  tasks_create.html  tasks_edit.html  tasks_table_body.html
